--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,5 +9,7 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
+spring.profiles.active=local
+
 # Environment Variables
 jwt.secret=${JWT_SECRET}
